<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.rangde.gsahu.educorp.activities.HomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_marginBottom="20dp"
        android:textSize="30sp"
        android:fontFamily="serif"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_type"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="20dp" />

        <RadioGroup
            android:id="@+id/account_type_group_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="right">

            <RadioButton
                android:id="@+id/account_type_parent_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/parent"
                android:layout_marginRight="10dp"/>

            <RadioButton
                android:id="@+id/account_type_teacher_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/teacher"/>

        </RadioGroup>

    </LinearLayout>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/email_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginBottom="10dp"
        android:textSize="20sp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="20sp"
        android:layout_marginBottom="5dp"
        android:onClick="registerUser"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:layout_gravity="end"
        android:onClick="showLoginPage"/>

</LinearLayout>
